# AGENTS

./: .gitignore  AGENTS.md  GENERIC_MIDDLEWARE_FRAMEWORK.md  GENERIC_TOOL_FRAMEWORK.md  PROJECT_OVERVIEW.md  README.md  constraint.MD  deepagent_sandbox.Dockerfile  main.py  protocol.py  pyproject.toml  sandbox.py
Deepagents/: __init__.py
Deepagents/KnowledgeSeedAgent/: __init__.py
Deepagents/WorkerAgent/: __init__.py
MainServer/: __init__.py  admin_config.py  agent_templates.py  comm.py  mail_router.py  main_server.py  protocol.py  state.py  test_comm.py  user_chat.py
MainServer/config/: agents.example.json
demo/: NESTED_DEMO_FRAMEWORK_CONSTRAINTS.md  demo_nested_outer_tool.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
memory/: .gitignore  README.md
memory/agents/: __init__.py  chunk_apply_agent.py  chunking_agent.py  knowledge_manager_agent.py  unified_agent.py
memory/demo/: demo_nested_agent.py  demo_nested_inner_tool.py  demo_nested_middleware.py  demo_server.py
memory/examples/: chunk_apply_example.py  knowledge_manager_middleware_example.py
memory/middleware/: __init__.py  chunking.json  (+12 more)
scripts/: start_langvideo.sh
tests/: __init__.py  real_agent_task_stream.py  real_browser_comm_quiet.py  real_browser_comm_stream.py  real_mail_file_attachment_quiet.py  real_memory_db_ops_quiet.py  real_memory_delete_state_quiet.py  real_memory_ingest_quiet.py  real_memory_update_ops_quiet.py  test_mainserver_admin_config.py  test_seedagent_config.py  test_sqlite_thread_restore.py
(+206 files in other folders)
