[project]
name = "langvideo-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "deepagents>=0.4.12",
    "langchain>=1.2.13",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=1.0.1",
    "neo4j>=6.1.0",
    "llama-index-core>=0.14.21",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

